--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.9.0",
-    "remixicon": "^2.5.0"
+    "remixicon": "^2.5.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
